# AwesomeWorld-Cmake

./: CMakeLists.txt  README.md
AwesomeWorld/: CMakeLists.txt  deploy-qt-windows.cmake.in  main.qml
AwesomeWorld-Installer/: CMakeLists.txt  installscript.qs  licence.txt  page.ui
